--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
 ADD_SUBDIRECTORY(cpt-yahsp)
 ADD_SUBDIRECTORY(dae)
+#ADD_SUBDIRECTORY(dae-moeo)
+#ADD_SUBDIRECTORY(daePeo)
