ajout de version dae sans omp

--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -36,12 +36,21 @@ LINK_LIBRARIES(gdsl gmp)
 ADD_LIBRARY(${PROJECT_NAME}-common STATIC ${SOURCES})
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SEQ_SOURCES})
 
-
 SET_TARGET_PROPERTIES(
   ${PROJECT_NAME}-common
   ${PROJECT_NAME}
   PROPERTIES
   COMPILE_FLAGS ""
+  )
+
+ADD_LIBRARY(${PROJECT_NAME}-common-dae-noomp STATIC ${SOURCES})
+ADD_LIBRARY(${PROJECT_NAME}-dae-noomp STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+
+SET_TARGET_PROPERTIES(
+  ${PROJECT_NAME}-common-dae-noomp
+  ${PROJECT_NAME}-dae-noomp
+  PROPERTIES 
+  COMPILE_FLAGS "-DDAE -Wno-unknown-pragmas"
   )
 
 if (MPI)
