ajout du coût comme second critère
optimisation temporelle uniquement, le coût n'intervient pas

plan->cost donne le coût du plan (somme pour l'instant) uniquement pour les problèmes multi-objectifs, sinon c'est toujours plan->makespan

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -8,10 +8,11 @@ PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
 
-ADD_DEFINITIONS(-O2 -Wall -g)
+ADD_DEFINITIONS(-Wall -g -O2 -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
 
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/src
+  ${CMAKE_CURRENT_SOURCE_DIR}/gdsl/src
   )
 
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
