première version avec contraintes d'activités dans YAHSP
exécutable : cpt_yahsp-ac

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -8,7 +8,7 @@ PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
 
-ADD_DEFINITIONS(-Wall -g -O2 -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
+ADD_DEFINITIONS(-Wall -g -O2)
 
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/src
