use the new templatized versions of the operators and the new is_feasible accessor in the decomposition itself

--- a/dae/src/CMakeLists.txt
+++ b/dae/src/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(LIBRARY_OUTPUT_PATH ${DAEX_LIB_OUTPUT_PATH})
 SET (DAEX_SOURCES
   utils/posix_timer.cpp
   utils/pddl_load.cpp
-  #  utils/evalBestPlanDump.cpp
+  utils/evalBestPlanDump.cpp
   core/decomposition.cpp
   core/goal.cpp
   )
