moved print_result to a utils/cli module

--- a/dae/src/CMakeLists.txt
+++ b/dae/src/CMakeLists.txt
@@ -12,6 +12,7 @@ SET (DAEX_SOURCES
   utils/posix_timer.cpp
   utils/pddl_load.cpp
   utils/evalBestPlanDump.cpp
+  utils/cli.cpp
   core/decomposition.cpp
   core/goal.cpp
   )
