--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -31,7 +31,7 @@ SET(MT_SOURCES yahsp-common.cpp yahsp-mt.cpp)
 SET(MPI_SOURCES yahsp-mpi.cpp)
 SET(DAE_SOURCES yahsp-dae.cpp)
 
-LINK_LIBRARIES(gdsl gmp rt termcap)
+LINK_LIBRARIES(gdsl gmp rt ncurses)
 
 ADD_LIBRARY(${PROJECT_NAME}-common STATIC ${SOURCES})
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SEQ_SOURCES})
@@ -65,21 +65,22 @@ else()
     COMPILE_FLAGS ""
     )
 
-
-if (MPI)
+if (MPI_FOUND)
 
   ADD_LIBRARY(${PROJECT_NAME}-common-mpi STATIC ${SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-mpi STATIC ${MT_SOURCES} ${MPI_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-mpi STATIC ${MT_SOURCES} ${MPI_SOURCES} ${MPI_LIBRARIES})
+  INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
 
   SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-common-mpi
     ${PROJECT_NAME}-mpi
     PROPERTIES
-    COMPILE_FLAGS "-DYAHSP_MPI -DYAHSP_MT ${OpenMP_C_FLAGS} "
+    COMPILE_FLAGS "-DYAHSP_MPI -DYAHSP_MT ${OpenMP_C_FLAGS}  ${MPI_COMPILE_FLAGS}"
+    LINK_FLAGS "${MPI_LINK_FLAGS}"
     )
 
 endif()
-  
+
 if (OPENMP_FOUND)
 
   ADD_LIBRARY(${PROJECT_NAME}-common-omp STATIC ${SOURCES})
