--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -8,8 +8,15 @@ PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
 
+FIND_PACKAGE(MPI)
+
 ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
-ADD_DEFINITIONS(-Wall -g -O2)
+
+IF (CMAKE_BUILD_TYPE MATCHES Debug)
+  ADD_DEFINITIONS(-Wall -g)
+ELSE()
+  ADD_DEFINITIONS(-Wall -g -O2)
+ENDIF()
 
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/src
