Reverting last commit which had too many features, and some unfinished

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -8,7 +8,7 @@ PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
 
-# FIND_PACKAGE(MPI)
+FIND_PACKAGE(MPI)
 
 ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
 
