Build system upgraded : more compilation options and new build scripts, described in README.

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -6,9 +6,15 @@ ENABLE_LANGUAGE(C CXX)
 
 PROJECT(cpt_yahsp_library)
 
-FIND_PACKAGE(OpenMP)
+IF (CPT_WITH_MP)
+    MESSAGE("[CPT-YAHSP] Tries to compile with OpenMP...")
+    FIND_PACKAGE(OpenMP)
+ENDIF()
 
-FIND_PACKAGE(MPI)
+IF (CPT_WITH_MPI)
+    MESSAGE("[CPT-YAHSP] Tries to compile with MPI...")
+    FIND_PACKAGE(MPI)
+ENDIF()
 
 ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
 
