--- a/dae/src/CMakeLists.txt
+++ b/dae/src/CMakeLists.txt
@@ -15,6 +15,13 @@ SET (DAEX_SOURCES
   utils/cli.cpp
   core/decomposition.cpp
   core/goal.cpp
+  # JSON sources
+  # TODO TODOB mettre à part ?
+  utils/json/Array.cpp
+  utils/json/Entity.cpp
+  utils/json/Object.cpp
+  utils/json/Parser.cpp
+  utils/json/String.cpp
   )
 
 ADD_LIBRARY(daex STATIC ${DAEX_SOURCES})
