Parallel evaluation with good stopping conditions (time or continuator conditions).

--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -39,7 +39,7 @@ IF(DAE_WITH_MPI)
     # for conditional compilation in code
     ADD_DEFINITIONS(-DWITH_MPI)
 
-    LINK_LIBRARIES(boost_mpi boost_serialization)
+    LINK_LIBRARIES(boost_mpi boost_serialization eompi)
 ENDIF()
 
 # include the sources
