bug de IPC7 qui avait été réintroduit (mauvaise synchro ?) recorrigé.

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -1,22 +1,18 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/install.cmake OPTIONAL)
-
 ENABLE_LANGUAGE(C CXX)
 
 PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
-
 FIND_PACKAGE(MPI)
+FIND_PACKAGE(BISON REQUIRED)
+FIND_PACKAGE(FLEX REQUIRED)
 
-ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
+ADD_DEFINITIONS(-Wall -g -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)
 
-IF (CMAKE_BUILD_TYPE MATCHES Debug)
-  ADD_DEFINITIONS(-Wall -g)
-ELSE()
-  ADD_DEFINITIONS(-Wall -g -O2)
-ENDIF()
+SET(CMAKE_C_FLAGS_RELEASE "-O2")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/src
