--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -1,6 +1,3 @@
-FIND_PACKAGE(BISON REQUIRED)
-FIND_PACKAGE(FLEX REQUIRED)
-
 BISON_TARGET(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp)
 FLEX_TARGET(Scanner parser.lex ${CMAKE_CURRENT_BINARY_DIR}/parser.yy.cpp)
 ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)
@@ -31,60 +28,52 @@ SET(MT_SOURCES yahsp-common.cpp yahsp-mt.cpp)
 SET(MPI_SOURCES yahsp-mpi.cpp)
 SET(DAE_SOURCES yahsp-dae.cpp)
 
+if (SCC)
+  SET(SCC_C_FLAGS "-DSCC")
+endif()
+
+if (OPENMP_FOUND)
+  SET(OPENMP_C_FLAGS " -DYAHSP_MT ${OpenMP_C_FLAGS}")
+endif()
+
 LINK_LIBRARIES(gdsl gmp rt ncurses)
 
 ADD_LIBRARY(${PROJECT_NAME}-common STATIC ${SOURCES})
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SEQ_SOURCES})
 
-
-if (SCC)
-
-  ADD_LIBRARY(${PROJECT_NAME}-common-mpi STATIC ${SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-mpi STATIC ${MT_SOURCES} ${MPI_SOURCES})
-
-  SET_TARGET_PROPERTIES(
-    ${PROJECT_NAME}-common
-    ${PROJECT_NAME}
-    PROPERTIES
-    COMPILE_FLAGS "-DSCC"
-    )
-
-  SET_TARGET_PROPERTIES(
-    ${PROJECT_NAME}-common-mpi
-    ${PROJECT_NAME}-mpi
-    PROPERTIES
-    COMPILE_FLAGS "-DYAHSP_MPI -DSCC"
-    )
-
-else()
-
-  SET_TARGET_PROPERTIES(
-    ${PROJECT_NAME}-common
-    ${PROJECT_NAME}
-    PROPERTIES
-    COMPILE_FLAGS ""
-    )
+SET_TARGET_PROPERTIES(
+  ${PROJECT_NAME}-common
+  ${PROJECT_NAME}
+  PROPERTIES
+  COMPILE_FLAGS "${SCC_C_FLAGS}"
+  )
 
 if (MPI_FOUND)
 
   ADD_LIBRARY(${PROJECT_NAME}-common-mpi STATIC ${SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-mpi STATIC ${MT_SOURCES} ${MPI_SOURCES} ${MPI_LIBRARIES})
+
   INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
 
   SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-common-mpi
     ${PROJECT_NAME}-mpi
     PROPERTIES
-    COMPILE_FLAGS "-DYAHSP_MPI -DYAHSP_MT ${OpenMP_C_FLAGS}  ${MPI_COMPILE_FLAGS}"
+    COMPILE_FLAGS "-DYAHSP_MPI ${SCC_C_FLAGS} ${OPENMP_C_FLAGS} ${MPI_COMPILE_FLAGS}"
     LINK_FLAGS "${MPI_LINK_FLAGS}"
     )
 
 endif()
 
+
 if (OPENMP_FOUND)
 
   ADD_LIBRARY(${PROJECT_NAME}-common-omp STATIC ${SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-mt STATIC ${MT_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-common-dae-omp STATIC ${SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae-sm STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae-mt STATIC ${SOURCES} ${MT_SOURCES} ${DAE_SOURCES})
 
   SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-common-omp
@@ -92,11 +81,6 @@ if (OPENMP_FOUND)
     PROPERTIES
     COMPILE_FLAGS "${OpenMP_C_FLAGS} -DYAHSP_MT"
     )
-
-  ADD_LIBRARY(${PROJECT_NAME}-common-dae-omp STATIC ${SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-dae-sm STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-dae-mt STATIC ${SOURCES} ${MT_SOURCES} ${DAE_SOURCES})
 
   SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-common-dae-omp
@@ -116,7 +100,5 @@ if (OPENMP_FOUND)
     PROPERTIES
     COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE -DSHARED_MEMOIZATION"
     )
-
-endif()
 
 endif()
